avoided Spring warnings